--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <canvas id="pong" width="800" height="500"></canvas>
+  <canvas id="pong"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
